# sysmap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  test.ps1  test.sh
.sysmap/: map.json
src/: cli.rs  colors.rs  main.rs
src/commands/: find.rs  init.rs  mod.rs  summary.rs  tree.rs  update.rs
src/config/: types.rs
src/map/: types.rs
src/patterns/: defaults.rs  matcher.rs  mod.rs
src/scanner/: mod.rs  project.rs  stats.rs  walker.rs
