[package]
name = "sysmap"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Intelligent project mapping for AI agents and humans"
license = "MIT"
repository = "https://github.com/yourusername/sysmap"
keywords = ["cli", "project", "mapping", "ai", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Directory traversal
walkdir = "2"
ignore = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal output
colored = "2"
indicatif = "0.17"

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
